feat: improve MCP client management and settings integration